version/0.7/_sources/examples/10-mesh_operations/index.rst.txt


.. _sphx_glr_examples_10-mesh_operations:

.. _mesh_operations:

Mesh operations examples
===========================================
These examples show how to manipulate meshes.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="    In order to plot the mesh, we add at the end of this example the cell_node connectivity">

.. only:: html

  .. image:: /examples/10-mesh_operations/images/thumb/sphx_glr_00-create_polygons_and_polyhedrons_thumb.png
    :alt: Create and display a mesh with polygon and polyhedron elements

  :ref:`sphx_glr_examples_10-mesh_operations_00-create_polygons_and_polyhedrons.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create and display a mesh with polygon and polyhedron elements</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Extracting the skin of a mesh to reduce the amount of data to operate on can be useful for spec...">

.. only:: html

  .. image:: /examples/10-mesh_operations/images/thumb/sphx_glr_05-skin_extraction_thumb.png
    :alt: Extract the skin from a mesh

  :ref:`sphx_glr_examples_10-mesh_operations_05-skin_extraction.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Extract the skin from a mesh</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Currently, there is no native operator to get nodal coordinates in an Local Coordinate System (...">

.. only:: html

  .. image:: /examples/10-mesh_operations/images/thumb/sphx_glr_13-nodes_in_local_coordinate_system_thumb.png
    :alt: Convert nodal coordinates field to local coordinate system

  :ref:`sphx_glr_examples_10-mesh_operations_13-nodes_in_local_coordinate_system.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Convert nodal coordinates field to local coordinate system</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/10-mesh_operations/00-create_polygons_and_polyhedrons
   /examples/10-mesh_operations/05-skin_extraction
   /examples/10-mesh_operations/13-nodes_in_local_coordinate_system

